--- a/src/app/Components/Shared/navigation/navigation.component.html
+++ b/src/app/Components/Shared/navigation/navigation.component.html
@@ -3,21 +3,24 @@
 <style>
 
 ul {
-  list-style-type: none;
-  margin: 0;
+  list-style-type:none;
+  margin:0;
   padding: 7px;
   overflow:visible;
+
 }
 
 li {
  float:left;
+ 
 }
 
 li a {
-  display: block;
+  display:inline-block;
   padding: 8px;
   background-color: rgb(245, 239, 239);
   color:rgb(49, 24, 24);
+  
 }
 
 .dropdown {
@@ -53,7 +56,7 @@ li a {
 <body>
 
 
-<ul style="background-color:whitesmoke;">
+<ul style="background-color:mistyrose; ">
   <li><a href="Home">Home</a></li>
   <li>
   <div class="dropdown">
@@ -66,8 +69,8 @@ li a {
   </div>
   </li>
   <li><a href="Search">Search</a></li>
-  <li><a href="Cart">Cart</a></li>
-  <li style="float:right"><a href="login">Login</a></li>
+  <li><a href="cart1">Cart</a></li>
+  <li style="float:right"><a href="l1">Login</a></li>
 </ul>
 <nav>
   <a routerLinkActive="active" routerLink="/Search"></a>
