--- a/src/app/Components/Categories/accessories/accessories.component.html
+++ b/src/app/Components/Categories/accessories/accessories.component.html
@@ -1,3 +1,4 @@
+<app-navigation></app-navigation>
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,6 +8,7 @@ div.gallery {
   border: 1px solid #ccc;
   float: left;
   width: 200px;
+  background-color:rgb(248, 240, 240);;
 }
 #cart
 {
@@ -16,14 +18,21 @@ div.gallery {
   width: 30px;
   height: 30px;
 }
-
+#quantity
+{
+  display:block;
+  margin-left:50%;
+  margin-right:50%;
+  width: 30px;
+  height: 20px;
+}
 div.gallery:hover {
   border: 2px solid #777;
 }
 
 div.gallery img {
-  width: 50px;
-  height: 100px;
+  width: 100px;
+  height: 150px;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -35,35 +44,44 @@ div.desc {
 }
 </style>
 </head>
-<body>
-    <h1 style="text-align: center;color: rgb(48, 10, 109);font-style:italic;">Accessories</h1>
+<body style="background-color:rgb(248, 240, 240);">
+    <h1 style="text-align: center;font-style:italic;">Accessories</h1>
+    <div>
 <div class="gallery">
     <img src="assets\img\Apple.jpg"  >
     <div class="desc">Apple watch</div>
   <div class="desc">Price: Rs 25999</div>
-  <img id="cart" src="assets\img\cart_icon.png" (click)="addtocart()" >
+ <input type="number" id="quantity" name="quantity" min="1" max="5" >
+  <img id="cart" src="assets\img\cart_icon.png" (click)="addtocart()" routerLink='/Cart' >
 </div>
 
 <div class="gallery">
     <img src="assets\img\Samsung.jpg" >
     <div class="desc">Samsung watch</div> 
   <div class="desc">Price: Rs 20000</div>
-  <img id="cart" src="assets\img\cart_icon.png" (click)="addtocart()">
+  <input type="number" id="quantity" name="quantity" min="1" max="5" >
+  <img id="cart" src="assets\img\cart_icon.png" (click)="addtocart()" routerLink='/Cart' >
 </div>
 
 <div class="gallery">
     <img src="assets\img\Realme.jpg"  >
     <div class="desc">Realme watch</div> 
   <div class="desc">Price: Rs 2999</div>
-  <img id="cart" src="assets\img\cart_icon.png"  (click)="addtocart()">
+  <input type="number" id="quantity" name="quantity" min="1" max="5" >
+  <img id="cart" src="assets\img\cart_icon.png"  (click)="addtocart()" routerLink='/Cart' > 
 </div>
 
 <div class="gallery">
     <img src="assets\img\Sonata.jpg" >
     <div class="desc">Sonata watch</div>  
   <div class="desc">Price: Rs 2599</div>
-  <img id="cart" src="assets\img\cart_icon.png" (click)="addtocart()" >
+  <input type="number" id="quantity" name="quantity" min="1" max="5" >
+  <img id="cart" src="assets\img\cart_icon.png" (click)="addtocart()" routerLink='/Cart' >
 </div>
+    </div>
+
+  <p>{{stat}}</p>
+<router-outlet></router-outlet>
 
 </body>
 </html>
