--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,12 @@
-<!--The content below is only a placeholder and can be replaced.-->
+
+  <router-outlet></router-outlet>
 
 
-  <!--  <app-header></app-header> 
 
-   <app-navigation></app-navigation> 
  
-   <app-home></app-home>  
-
- <app-clothing></app-clothing> 
-
-  <app-electronics></app-electronics>
 
 
-  <app-accessories></app-accessories>
-
-
-  <app-shopping-cart></app-shopping-cart>
-
-  <app-footer></app-footer> -->
-  <app-navigation></app-navigation> 
-<app-home></app-home>
   <!-- <nav>
   <a routerLinkActive="active" routerLink="/Search"></a>
   <a routerLinkActive="active" routerLink="/Cart"></a>
 </nav>   -->
-<app-footer></app-footer>
