--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -40,10 +40,19 @@
  #cart
 {
   display:block;
-  width: 40%;
-  height: 20%;
+  width: 35%;
+  height: 10%;
   color:whitesmoke;
-} 
+}  
+
+#quantity
+{
+  display:block;
+  margin-left:40%;
+  margin-right:50%;
+  width: 30px;
+  height: 20px;
+}
     </style>
 </head>
     <body>
@@ -54,11 +63,11 @@
  padding-right:50px;}
 </style>
 </head>-->
-
+<app-navigation></app-navigation>
 <div class="container" style="max-width:1000px;">
-  <img class="mySlides" src="assets\img\slide1.jpg" style="width:1350px;height:350px;margin-top:90px;">
- <!--  <img class="mySlides" src="assets\img\slide2.jpg" style="width:100%">
-  <img class="mySlides" src="assets\img\slide3.jpg" style="width:100%"> -->
+  <img class="mySlides" src="assets\img\slide6.jpg" style="width:1350px;height:400px;margin-top:60px;">
+  <!-- <img class="mySlides" src="assets\img\slide2.jpg" style="width:100%">
+  <img class="mySlides" src="assets\img\slide3.jpg" style="width:100%">  -->
 </div>
  
 <!--  <script>
@@ -89,6 +98,7 @@ function carousel() {
       <p> TOP </p>
         Price: <del> Rs 658</del><span> Rs 525</span> 
         </div>
+        <input type="number" id="quantity" name="quantity" min="1" max="5" >
         <img id="cart" src="assets\img\cart_icon.png" (click)="addtocart()" >   
     </div>
     <div class="column" >
@@ -98,6 +108,7 @@ function carousel() {
          <del>Price: Rs 2999</del> <span>  Rs 2600</span>
          
         </div> 
+        <input type="number" id="quantity" name="quantity" min="1" max="5" >
       <img id="cart" src="assets\img\cart_icon.png" (click)="addtocart()"> 
     </div>
     <div class="column" >
@@ -107,6 +118,7 @@ function carousel() {
            <del>Price: Rs 1577</del> <span> Rs 1200</span>
         
            </div> 
+           <input type="number" id="quantity" name="quantity" min="1" max="5" >
         <img id="cart" src="assets\img\cart_icon.png" (click)="addtocart()"> 
     </div>
     <div class="column" >
@@ -116,6 +128,7 @@ function carousel() {
            <del>Price: Rs 563</del> <span> Rs 480</span>
            
            </div> 
+           <input type="number" id="quantity" name="quantity" min="1" max="5" >
         <img id="cart" src="assets\img\cart_icon.png" (click)="addtocart()"> 
     </div>
     <div class="column" >
@@ -125,6 +138,7 @@ function carousel() {
             <del>Price: Rs 17999</del> <span> Rs 15000 </span>
            
            </div> 
+           <input type="number" id="quantity" name="quantity" min="1" max="5" >
         <img id="cart" src="assets\img\cart_icon.png" (click)="addtocart()"> 
       </div>
       <div class="column" >
@@ -134,12 +148,11 @@ function carousel() {
             <del>Price: Rs 20000</del> <span> Rs 18000</span>
            
             </div> 
+            <input type="number" id="quantity" name="quantity" min="1" max="5" >
          <img id="cart" src="assets\img\cart_icon.png" (click)="addtocart()" >
       </div>
   </div>
   <p>{{stat}}</p>
 </body>
-
+<app-footer></app-footer>
 </html>
-
- 
