--- a/src/app/Components/Categories/accessories/accessories.component.html
+++ b/src/app/Components/Categories/accessories/accessories.component.html
@@ -8,7 +8,9 @@ div.gallery {
   border: 1px solid #ccc;
   float: left;
   width: 200px;
-  background-color:rgb(248, 240, 240);;
+  border-radius: 2px;
+  orientation: landscape;
+  background-color: rgb(245, 239, 239);
 }
 #cart
 {
@@ -26,16 +28,18 @@ div.gallery {
   width: 30px;
   height: 20px;
 }
+
 div.gallery:hover {
   border: 2px solid #777;
 }
 
 div.gallery img {
-  width: 100px;
-  height: 150px;
+  width: 150px;
+  height: 100px;
   display: block;
   margin-left: auto;
   margin-right: auto;
+  border: 2px skyblue;
 }
 
 div.desc {
@@ -44,44 +48,28 @@ div.desc {
 }
 </style>
 </head>
-<body style="background-color:rgb(248, 240, 240);">
-    <h1 style="text-align: center;font-style:italic;">Accessories</h1>
-    <div>
-<div class="gallery">
-    <img src="assets\img\Apple.jpg"  >
-    <div class="desc">Apple watch</div>
-  <div class="desc">Price: Rs 25999</div>
- <input type="number" id="quantity" name="quantity" min="1" max="5" >
-  <img id="cart" src="assets\img\cart_icon.png" (click)="addtocart()" routerLink='/Cart' >
-</div>
+<body>
+ 
+    <h1 style="text-align: center;color: rgb(48, 10, 109);font-style:italic;">Accessories</h1>
+   
+
+<div>
 
 <div class="gallery">
-    <img src="assets\img\Samsung.jpg" >
-    <div class="desc">Samsung watch</div> 
-  <div class="desc">Price: Rs 20000</div>
-  <input type="number" id="quantity" name="quantity" min="1" max="5" >
-  <img id="cart" src="assets\img\cart_icon.png" (click)="addtocart()" routerLink='/Cart' >
+  <p *ngFor="let y of obj">
+   <img id="img"   src= "assets\img\{{y.image }}"/>
+   <li style="text-align: center;">{{y.pname}}</li>
+   <li style="text-align: center;">Rs {{y.price}}</li>
+    <img id="cart" src="assets\img\cart_icon.png" (click)="addtocart()" routerLink="/cart1">
+  </p> 
+ 
+</div>
 </div>
 
-<div class="gallery">
-    <img src="assets\img\Realme.jpg"  >
-    <div class="desc">Realme watch</div> 
-  <div class="desc">Price: Rs 2999</div>
-  <input type="number" id="quantity" name="quantity" min="1" max="5" >
-  <img id="cart" src="assets\img\cart_icon.png"  (click)="addtocart()" routerLink='/Cart' > 
-</div>
 
-<div class="gallery">
-    <img src="assets\img\Sonata.jpg" >
-    <div class="desc">Sonata watch</div>  
-  <div class="desc">Price: Rs 2599</div>
-  <input type="number" id="quantity" name="quantity" min="1" max="5" >
-  <img id="cart" src="assets\img\cart_icon.png" (click)="addtocart()" routerLink='/Cart' >
-</div>
-    </div>
-
-  <p>{{stat}}</p>
-<router-outlet></router-outlet>
-
+<span></span>
+  
 </body>
 </html>
+
+
