--- a/src/app/Components/Categories/clothing/clothing.component.html
+++ b/src/app/Components/Categories/clothing/clothing.component.html
@@ -8,6 +8,9 @@ div.gallery {
   border: 1px solid #ccc;
   float: left;
   width: 200px;
+  border-radius: 2px;
+  orientation: landscape;
+  background-color: rgb(245, 239, 239);
 }
 #cart
 {
@@ -36,6 +39,7 @@ div.gallery img {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  border: 2px skyblue;
 }
 
 div.desc {
@@ -47,51 +51,25 @@ div.desc {
 <body>
  
     <h1 style="text-align: center;color: rgb(48, 10, 109);font-style:italic;">Clothing</h1>
-    <div>
-<div class="gallery">
-    <img src="assets\img\top.jpg"  >
-  <div class="desc">Price: Rs 349</div>
-  <input type="number" id="quantity" name="quantity" min="1" max="5" >
-  <img id="cart" src="assets\img\cart_icon.png" (click)="addtocart()" >
-</div>
+   
+
+<div>
 
 <div class="gallery">
-    <img src="assets\img\top2.jpg" >
-  <div class="desc">Price: Rs 658</div>
-  <input type="number" id="quantity" name="quantity" min="1" max="5" >
-  <img id="cart" src="assets\img\cart_icon.png" (click)="addtocart()">
-</div>
-
-<div class="gallery">
-    <img src="assets\img\top3.jpg"  >
-  <div class="desc">Price: Rs 618</div>
-  <input type="number" id="quantity" name="quantity" min="1" max="5" >
-  <img id="cart" src="assets\img\cart_icon.png"  (click)="addtocart()">
-</div>
-
-<div class="gallery">
-    <img src="assets\img\top4.jpg" >
-  <div class="desc">Price: Rs 563</div>
-  <input type="number" id="quantity" name="quantity" min="1" max="5" >
-  <img id="cart" src="assets\img\cart_icon.png" (click)="addtocart()" >
-</div>
-
-<div class="gallery">
-    <img src="assets\img\jeans1.jpg" >
-  <div class="desc">Price: Rs 563</div>
-  <input type="number" id="quantity" name="quantity" min="1" max="5" >
-  <img id="cart" src="assets\img\cart_icon.png" (click)="addtocart()" >
-</div>
-
-<div class="gallery">
-    <img src="assets\img\jeans2.jpg" >
-  <div class="desc">Price: Rs 563</div>
-   <input type="number" id="quantity" name="quantity" min="1" max="5" >
-  <img id="cart" src="assets\img\cart_icon.png" (click)="addtocart()" >
+  <p *ngFor="let y of obj">
+   <img id="img"   src= "assets\img\{{y.image }}"/>
+   <li style="text-align: center;">{{y.pname}}</li>
+   <li style="text-align: center;">Rs {{y.price}}</li>
+    <img id="cart" src="assets\img\cart_icon.png" (click)="addtocart()" routerLink="/cart1" >
+  </p> 
+ 
 </div>
 </div>
 
-<br><p>{{stat}}</p>
+
+
+<span></span>
+  
 </body>
 </html>
 
